# Choose-a-pick

./: .gitignore  README.md  backuo.txt  pyproject.toml
.github/workflows/: deploy.yml
src/: main.py
