[project]
name = "choose-a-pick"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.2"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.jesseheikkinen"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "choose-a-pick"

# company name to display in about app dialogs
company = "jesseheikkinen"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Jesse Heikkinen"

[tool.flet.app]
path = "src"